<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fragments.ComposeFragment">

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnTakePic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/take_picture" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/btnTakePic"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image_to_post"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPostImage"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/submit" />


</LinearLayout>