<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostDetailsActivity">

    <TextView
        android:id="@+id/tvUsernameDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="28sp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="48dp"
        tools:text="@string/username" />

    <ImageView
        android:id="@+id/ivPostDetails"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_below="@+id/tvUsernameDetails"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tvDescriptionDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPostDetails"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        tools:text="@string/description" />

    <TextView
        android:id="@+id/tvTimeStampDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescriptionDetails"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:text="Post Created" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCommentSubmit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp" />

    <EditText
        android:id="@+id/tvComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTimeStampDetails"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/btnCommentSubmit"
        android:inputType="text"
        android:hint="@string/add_a_comment"
        android:autofillHints="Add a comment!" />

    <Button
        android:id="@+id/btnCommentSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTimeStampDetails"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/submit" />
</RelativeLayout>