<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="fragments.PostsFragment">

    <ImageView
        android:id="@+id/ivProfileMain"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/profile_pic"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="743dp"
        android:layout_below="@+id/ivProfileMain"
        android:background="#FFFFFF"
        android:layout_marginTop="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPosts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddProfilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/swipeContainer"
        android:layout_alignEnd="@+id/ivProfileMain"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/tvMainUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/ivProfileMain"
        android:textSize="36sp"
        tools:text="@string/username" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/swipeContainer"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/logout" />

</RelativeLayout>